--- a/styles/home-page/homePage.module.css
+++ b/styles/home-page/homePage.module.css
@@ -68,7 +68,7 @@
 /* Content after scroll */
 .content {
   padding: 2rem;
-  background-color: #a32f2f;
+  background-color: #f5f5f5;
   min-height: 100vh;
   text-align: center;
 }
