--- a/styles/header/header.module.css
+++ b/styles/header/header.module.css
@@ -34,6 +34,19 @@
   font-size: 2rem;
 }
 
+.languageSwitcher {
+  display: flex;
+}
+
+.languageSwitcher h2 {
+  margin: 0;
+  font-size: 2rem;
+}
+
+.activeLang {
+  text-decoration: underline;
+}
+
 .burgerButton {
   background: none;
   border: none;
