--- a/styles/sidebar/sidebar.module.css
+++ b/styles/sidebar/sidebar.module.css
@@ -67,6 +67,7 @@
   font-size: 1.5rem;
   font-weight: 100;
   color: #434343;
+      margin-left: 1.5rem;
 }
 
 .closeButton {
@@ -125,13 +126,17 @@
 }
 
 @media (max-height: 700px) {
+  .sidebarHeader {
+    margin-bottom: 0;
+  }
   .sidebarLinks {
-    gap: 0.8rem;
-    font-size: 1.4rem;
+    gap: 0.4rem;
+    font-size: 1.1rem;
   }
   .sidebarLinks p {
-    font-size: 1rem;
+    font-size: 0.8rem;
   }
+  
 }
 
 @media (max-width: 500px) {
@@ -139,7 +144,7 @@
     width: 100%;
   }
   .sidebarLinks {
-    gap: 0.5rem;
+    gap: 0.3rem;
   }
 .backdrop{
   display: none;
