--- a/styles/events/event-card/eventCard.module.css
+++ b/styles/events/event-card/eventCard.module.css
@@ -1,7 +1,7 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  gap: 2rem;
+  gap: 5rem 2rem;
 }
 
 .card {
@@ -16,16 +16,23 @@
   transform: translateY(-6px) scale(1.02);
 }
 
-.image {
+/* Image Wrapper and Image Styles for <Image /> component */
+.imageWrapper {
+  position: relative;
+  width: 100%;
   height: 280px;
-  background-size: cover;
-  background-position: center;
   border-radius: 12px;
+  overflow: hidden;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.card:hover .image {
+.image {
+  object-fit: cover;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover .imageWrapper {
   transform: scale(1.02);
   box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
@@ -63,20 +70,18 @@
   font-size: 1rem;
 }
 
+/* Responsive */
 @media (max-width: 768px) {
-  .image {
-  height: 200px;
+  .imageWrapper {
+    height: 200px;
+  }
 
-}
+  .grid {
+    gap: 5rem;
+    justify-content: center;
+  }
 
-.grid {
-  gap: 5rem;
-      justify-content: center;
-}
-
-.infoCard {
-
-  width: 65%;
-
-}
+  .infoCard {
+    width: 65%;
+  }
 }
