--- a/app/(main-content)/globals.css
+++ b/app/(main-content)/globals.css
@@ -10,6 +10,13 @@
   }
 } */
 
+@font-face {
+  font-family: 'ArchyEDT Bold';
+  src: url('fonts/ArchyEDT-Bold.woff2') format('woff2');
+  font-weight: bold;
+  font-style: normal;
+}
+
 html,
 body {
   max-width: 100vw;
@@ -30,7 +37,8 @@ body {
 body {
   /* color: var(--foreground);
   background: var(--background); */
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'ArchyEDT Bold', sans-serif;
+  font-weight: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
