--- a/styles/admin/admin-add-images/adminAddImages.module.css
+++ b/styles/admin/admin-add-images/adminAddImages.module.css
@@ -12,6 +12,7 @@
   cursor: pointer;
   background-color: #f9f9f9;
   transition: background-color 0.3s ease;
+  width: fit-content;
 }
 
 .dropzone:hover {
