--- a/styles/footer/footer.module.css
+++ b/styles/footer/footer.module.css
@@ -2,7 +2,6 @@
   background-color: black;
   color: white;
   padding: 2rem;
-  font-family: 'Arial', sans-serif;
   text-align: center;
 }
 
@@ -21,6 +20,17 @@
   font-size: 1.2rem;
 }
 
+.follow {
+  margin-bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.follow h2 {
+  margin-right: 1rem;
+}
+
 .contact span,
 .address span {
   color: white;
@@ -32,43 +42,64 @@
 }
 
 .icon {
-  font-size: 1.5rem;
-  color: white;
-  transition: 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.3s;
+  cursor: pointer;
 }
 
 .icon:hover {
-  color: #ccc;
+  transform: scale(1.05);
+}
+
+.imageWrapper {
+  position: relative;
+  width: 54px;
+  height: 54px;
+}
+
+.image {
+  object-fit: contain;
 }
 
 @media (max-width: 1450px) {
- .title{
-  font-size: 1.5rem;
- }
- .address,
-.contact,
-.follow {
-  margin-bottom: 0.7rem;
-  color: #888;
-  font-size: 1rem;
-}
+  .title {
+    font-size: 1.5rem;
+  }
+  .address,
+  .contact,
+  .follow {
+    margin-bottom: 0.7rem;
+    color: #888;
+    font-size: 1rem;
+  }
 
+  .follow {
+    margin-bottom: 0;
+  }
 }
 
 @media (max-width: 700px) {
   .footerContainer {
     padding: 0.8rem;
   }
- .title{
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
- }
- .address,
-.contact,
-.follow {
-  margin-bottom: 0.5rem;
-  color: #888;
-  font-size: 0.7rem;
+  .title {
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+  }
+  .address,
+  .contact,
+  .follow {
+    margin-bottom: 0.5rem;
+    color: #888;
+    font-size: 0.7rem;
+  }
 }
 
+@media (max-width: 480px) {
+  .imageWrapper {
+    width: 30px;
+    height: 30px;
+  }
 }
