--- a/styles/horses/horse-filter/hroseFilter.module.css
+++ b/styles/horses/horse-filter/hroseFilter.module.css
@@ -9,8 +9,10 @@
   background-color: black;
   color: white;
   border: 1px solid white;
+  height: 84px;
   padding: 0.5rem 1rem;
-  font-size: 1rem;
+  font-size: 1.3rem;
+  letter-spacing: 2px;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
@@ -24,7 +26,7 @@
   display: flex;
   align-items: center;
   background-color: black;
-  padding: 1rem;
+  padding: 1.5rem;
   gap: 1rem;
   flex-wrap: wrap;
 }
