--- a/styles/horses/horses-list/horsesList.module.css
+++ b/styles/horses/horses-list/horsesList.module.css
@@ -6,6 +6,7 @@
 }
 
 .card {
+  margin: 1rem;
   position: relative;
   height: 400px;
   max-width: 80vh;
@@ -75,6 +76,11 @@
 .info {
   font-size: 24px;
   margin: 2px 0;
+}
+
+.carouselCard {
+  margin: 0 10px; /* or adjust value for desired space */
+  box-sizing: border-box;
 }
 
 @media (max-width: 2330px) {
