--- a/styles/sponsors/sponsors-list/sponsorsList.module.css
+++ b/styles/sponsors/sponsors-list/sponsorsList.module.css
@@ -48,7 +48,7 @@
 }
 
 .buttonWrapper {
-  margin-top: 2rem;
+  margin: 2rem;
 }
 
 .joinButton {
@@ -68,4 +68,13 @@
 .loading {
   text-align: center;
   padding: 2rem;
+}
+
+@media (max-width: 480px) {
+  .grid {
+    justify-content: center;
+  }
+  .card img {
+    max-height: 90px;
+  }
 }
