--- a/styles/home-page/homePage.module.css
+++ b/styles/home-page/homePage.module.css
@@ -94,6 +94,17 @@
   margin-left: 1rem;
 }
 
+.newsTitle {
+  font-size: 3rem;
+  background-color: black;
+  color: white;
+  display: inline-block;
+  padding: 0.5rem 2.5rem;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin: 1rem;
+}
+
 /* Responsive adjustments */
 @media (max-width: 1245px) {
   .imgContainer {
