--- a/styles/sponsors/sponsors-list/sponsorsList.module.css
+++ b/styles/sponsors/sponsors-list/sponsorsList.module.css
@@ -58,6 +58,16 @@
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease;
+
+  /* Fix for iOS */
+  /* Reset native styling */
+  appearance: none; /* Standard */
+  -webkit-appearance: none; /* Safari / iOS */
+  -moz-appearance: none; /* Firefox */
+
+  -webkit-tap-highlight-color: transparent; /* Remove iOS blue highlight */
+  color: black;
+  text-decoration: none;
 }
 
 .joinButton:hover {
