add tab icon and some styles

--- a/app/(main-content)/globals.css
+++ b/app/(main-content)/globals.css
@@ -43,6 +43,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+button {
+  font-family: 'ArchyEDT Bold', sans-serif;
+  font-weight: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
