--- a/styles/sponsors/sponsors-list/sponsorsList.module.css
+++ b/styles/sponsors/sponsors-list/sponsorsList.module.css
@@ -58,7 +58,7 @@
   font-weight: bold;
   cursor: pointer;
   transition: all 0.3s ease;
-
+  font-size: large;
   /* Fix for iOS */
   /* Reset native styling */
   appearance: none; /* Standard */
