add slider when start list click add images for event and add email send on upcoming events

--- a/styles/news/news-details/newsDetails.module.css
+++ b/styles/news/news-details/newsDetails.module.css
@@ -30,6 +30,10 @@
   border-radius: 8px;
 }
 
+.date {
+  text-align: end !important;
+}
+
 /* Tablet adjustments */
 @media (max-width: 1024px) {
   .title {
