--- a/styles/horses/horse-details/horseDetails.module.css
+++ b/styles/horses/horse-details/horseDetails.module.css
@@ -65,9 +65,9 @@
     gap: 0;
   }
   .gallery {
-    columns: 100px;
+    columns: inherit;
   }
   .galleryItem img {
-    width: 100px;
+    width: 100%;
   }
 }
