--- a/app/(main-content)/globals.css
+++ b/app/(main-content)/globals.css
@@ -15,6 +15,7 @@
   src: url('fonts/ArchyEDT-Bold.woff2') format('woff2');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 html,
